--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,43 @@
+* {
+  font-family: "Courier New", Courier, monospace;
+}
+
 body {
   margin: 20px;
+  display: flex;
+  justify-content: center;
+  background-color: aquamarine;
+}
+header {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+
+p {
+  text-align: center;
+  font-size: 30px;
+}
+
+button {
+  /* height: 20px;
+  width: 20px; */
+  margin: 5px;
+  border: black 1px solid;
+  border-radius: 10px;
+}
+
+h1 {
+  text-decoration: underline;
+  font-size: 50px;
+}
+.board-row {
+  display: flex;
+  justify-content: center;
 }
